--- a/composer.json
+++ b/composer.json
@@ -15,15 +15,15 @@
     },
     "bin": ["bin/lto-sign"],
     "require": {
-        "php": "~5.6",
+        "php": "~7.1",
         "ext-json": "*",
-        "ext-libsodium": "1.*",
+        "ext-sodium": "2.*",
         "stephenhill/base58": "^1.1",
         "paragonie/random_compat": "^2.0",
         "psr/http-message": "^1.0"
     },
     "require-dev": {
-        "jasny/php-code-quality": "^2.1"
+        "jasny/php-code-quality": "^2.3"
     },
     "autoload": {
         "psr-4": {
