--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "ext-sodium": "2.*",
         "stephenhill/base58": "^1.1",
         "paragonie/random_compat": "^2.0",
-        "psr/http-message": "^1.0"
+        "psr/http-message": "^1.0",
+        "kornrunner/keccak": "^1.0"
     },
     "require-dev": {
         "jasny/php-code-quality": "^2.3"
