--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "php": "~7.1",
         "ext-json": "*",
-        "ext-sodium": "2.*",
+        "ext-sodium": "2.* || 7.*",
         "stephenhill/base58": "^1.1",
         "psr/http-message": "^1.0",
         "kornrunner/keccak": "^1.0"
