--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
         "php": "~7.1",
         "ext-json": "*",
         "ext-sodium": "2.* || 7.*",
-        "stephenhill/base58": "^1.1",
         "psr/http-message": "^1.0",
-        "kornrunner/keccak": "^1.0"
+        "kornrunner/keccak": "^1.0",
+        "legalthings/base58-compat": "^0.1.0"
     },
     "require-dev": {
         "jasny/php-code-quality": "^2.3"
