Fix address generation to match js. Address is generated from signkey and not encrypt key.
Created functions for hashing and encoding strings. Replaces Encoding class.
Use aliases for sodium functions.

--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,9 @@
     "autoload": {
         "psr-4": {
             "LTO\\": "src/"
-        }
+        },
+        "files": [
+            "src/functions.php"
+        ]
     }
 }
