Replaced custom HTTPSignature class with classes to be used   in conjunction with the LTO http signature library.

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "ext-json": "*",
         "ext-sodium": "2.* || 7.*",
         "psr/http-message": "^1.0",
-        "legalthings/base58-compat": "^0.1.0"
+        "legalthings/base58-compat": "^0.1.0",
+        "psr/http-server-middleware": "^1.0"
     },
     "require-dev": {
         "jasny/php-code-quality": "^2.3"
@@ -31,5 +32,10 @@
         "files": [
             "src/functions.php"
         ]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "LTO\\Tests\\": "tests/"
+        }
     }
 }
