--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "php": ">=7.2.0",
         "ext-json": "*",
         "ext-sodium": "2.* || 7.*",
-        "ext/base58": "*",
+        "ext-base58": "*",
         "psr/http-message": "^1.0",
         "psr/http-server-middleware": "^1.0"
     },
