--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@ branches:
 install:
   - composer install
   - wget https://scrutinizer-ci.com/ocular.phar -O "$HOME/ocular.phar"
-  
+  - pecl install base58
+
 script:
   - vendor/bin/phpunit --coverage-clover cache/logs/clover.xml
 
