Put sign logic for event in Event class instead of Account. Test using PHPUnit 8 or 9.

--- a/composer.json
+++ b/composer.json
@@ -27,15 +27,14 @@
         "php": ">=7.2.0",
         "ext-json": "*",
         "ext-sodium": "2.* || 7.*",
+        "ext-curl": "*",
         "legalthings/base58-compat": "^0.1.0",
         "psr/http-message": "^1.0",
         "psr/http-server-middleware": "^1.0"
     },
     "require-dev": {
-        "jasny/php-code-quality": "^2.3"
-    },
-    "suggests": {
-        "ext-base58": "Base58 extension performs much better"
+        "guzzlehttp/guzzle": "^7.2",
+        "jasny/php-code-quality": "^2.6"
     },
     "conflict": {
         "legalthings/lto-api": "*"
