--- a/.travis.yml
+++ b/.travis.yml
@@ -3,28 +3,21 @@ language: php
 php:
   - 7.2
   - 7.3
-  - 7.4snapshot
-  - nightly
-
-matrix:
-  allow_failures:
-    - php: 7.4snapshot
-    - php: nightly
+  - 7.4
+  - 8.0
 
 branches:
   only:
     - master
+    - /^v\d+\.\d+\.\d+$/
 
-# Travis is running Ubuntu 14.04 which doesn't have package libbase58
 before_install:
-  - wget https://github.com/bitcoin/libbase58/archive/v0.1.4.tar.gz -O libbase58-0.1.4.tar.gz
-  - tar -xzf libbase58-0.1.4.tar.gz
-  - pushd libbase58-0.1.4 && autoreconf --install && ./configure --prefix=/usr && make && sudo make install && popd
+  - echo "extension = sodium.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+  - pecl install base58
 
 install:
   - composer install
   - wget https://scrutinizer-ci.com/ocular.phar -O "$HOME/ocular.phar"
-  - pecl install base58-beta
 
 script:
   - vendor/bin/phpunit --coverage-clover cache/logs/clover.xml
