--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "LegalThings",
-            "email": "info@legalthings.io"
+            "name": "LTO Network",
+            "email": "info@ltonetwork.com"
         },
         {
             "name": "Arnold Daniels",
